--- a/kaffamobile/src/Components/Navbar.css
+++ b/kaffamobile/src/Components/Navbar.css
@@ -6,6 +6,7 @@
     margin: 0;
     white-space: nowrap;
     font-size: 20px;
+    font-weight: bold;
     text-decoration: none;
     border: none;
     cursor: pointer;
